# ecsx

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
include/ecsx/Component/: BaseComponent.hpp  Bitset.hpp  Bitset.inl  Component.hpp  ComponentsHolder.hpp  ComponentsHolder.inl  ComponentsManager.hpp  ComponentsManager.inl  Entity.hpp  PositionComponent.hpp  VelocityComponent.hpp
include/ecsx/Receiver/: CMakeLists.txt  DatabaseSubscriber.hpp  Notifier.hpp  Subscriber.hpp
src/ecsx/: CMakeLists.txt
src/ecsx/Component/: BaseComponent.cpp  CMakeLists.txt  ComponentsHolder.cpp  ComponentsManager.cpp  Entity.cpp
test/: CMakeLists.txt
test/Component/: CMakeLists.txt  ComponentsHolderTest.cpp  ComponentsManagerTest.cpp  MockDatabaseSubscriber.hpp
